package proyectocompiladores.contexto;

public enum TipoDato {
    INT,
    DOUBLE,
    BOOL,
    VOID;
}
