package proyectocompiladores.contexto;

public class Variable extends Identificador {
    public Variable(String nombre, TipoDato tipoDato) {
        super(nombre, tipoDato);
    }
}
